# ApiMocktle

./: .gitignore  README.md  electron-builder.json5  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
electron/: dev.mjs  main.mjs  server.mjs
scripts/: build-icons.mjs  check-asar.mjs
src/: api-client.ts  curl-import-parser.ts  enums.ts  main.tsx  project-environment-utils.ts  root.tsx  routes.ts  routes.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: app_config_cmd.rs  app_info.rs  auth.rs  collab.rs  environments.rs  exports.rs  imports.rs  menu_items.rs  mod.rs  projects.rs  public.rs  recycle.rs  request_runner.rs  share_links.rs  shared_docs.rs  shared_files.rs  tokens.rs
src-tauri/src/db/: auth_repo.rs  client.rs  menu_repo.rs  meta_repo.rs  mod.rs  personal_token_repo.rs  project_repo.rs  recycle_repo.rs  share_links_repo.rs  shared_files_repo.rs  token_repo.rs
src-tauri/src/http/: mod.rs  yapi_server.rs
src-tauri/src/services/: app_config.rs  auth_service.rs  crypto.rs  import_service.rs  mod.rs  yapi_service.rs
src-tauri/src/ws/: collab_server.rs  mod.rs
src-tauri/tests/: proxy_integration_test.rs
src/app/: page.tsx
src/components/: DataTypeSelect.tsx  EditableTable.tsx  HeaderNav.tsx  JsonSchemaCard.tsx  ParticleCanvas.tsx  ProjectIcon.tsx  ProjectQuickSwitch.tsx  UserMenu.tsx
src/configs/: static.ts
(+94 files in other folders)
