[package]
name = "apimocktle"
version = "1.0.0"
edition = "2021"

[lib]
name = "apimocktle_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
scrypt = "0.11"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
yrs = "0.20"
serde_yaml = "0.9"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
tokio-tungstenite = "0.21"
axum = "0.7"
